# AdventureGame

./: main.py  pyproject.toml
static/: endings.js  fader.js  screencheck.js  styles.css
templates/: ENDING-BadTeethIT.html  ENDING-BadTeethWeld.html  ENDING-CheeseSimChips.html  ENDING-ChipFinder.html  ENDING-ChipOverload.html  ENDING-ChipsGenocide.html  ENDING-Doom.html  ENDING-EmbraceCheese.html  ENDING-EnthusiasticTakeOutChips.html  ENDING-FSNewGame.html  ENDING-FSOldGame.html  ENDING-Fortnite.html  ENDING-FriendConvo.html  ENDING-HomeChips.html  ENDING-MadMum.html  ENDING-MadMumDeliquent.html  ENDING-Minecraft.html  ENDING-MumNewGame.html  ENDING-MumOldGame.html  ENDING-NotTiredTakeOutChips.html  ENDING-RunCheese.html  ENDING-StandForever.html  ENDING-StandForeverMum.html  ENDING-TakeOutDrone.html  ENDING-TiredTakeOutChips.html  ENDING-Vanish.html  ENDING-VistaMum.html  actionTemplate.txt  endingTemplate.txt  endings.html  index.html  intro.html  xBase.html  xC-Bed.html  xC-CheeseSim.html  xC-CloseEmails.html  xC-EatChips.html  xC-EatExtraChips.html  xC-EatMoreChips.html  xC-Friend.html  (+24 more)
