[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Year 9 DT - Python, Flask, HTML, CSS, JavaScript/jQuery text-based game"
authors = ["Lucas Bubner - 9WI 2022; lkbubner@proton.me"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.1.2"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"